--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
                     <div class="swiper-wrapper">
                       <!-- Slides (Cada slide contém um vídeo) -->
                       <div class="swiper-slide">
-                        <video src="./src/videos/potato day.mp4" autoplay loop muted controls></video>
+                        <iframe width="200" height="356" src="https://www.youtube.com/embed/E6yuy4KmnEw?autoplay=1&mute=1" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                        </iframe>
                       </div>
                       <div class="swiper-slide">
                         <video src="./src/videos/art wave.mov" autoplay loop muted controls></video>
