--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     <main>
         <section id="home" class="bg-color-green-linear pt-20">
             <div class="md:flex md:justify-center">
-                <div class="text-center pt-6">
+                <div class="text-center pt-6 md:mt-14">
                     <h1 class="text-xl uppercase md:text-3xl">Impulsione a sua marca</h1>
                     <h2 class="text-sm md:text-base">nossa missão é fazer o seu negócio ir além!</h2>
                     <div class="my-6">
-                        <a href="" class="main-whatsapp primary-whatsapp bg-color-bege rounded-3xl py-2 px-8 md:text-2  xl">
+                        <a href="" class="main-whatsapp primary-whatsapp bg-color-bege rounded-3xl py-2 px-8 md:text-2xl md:py-3 md:px-14 md:rounded-full">
                             <i class="fa-brands fa-whatsapp"></i>
                             Transforme seu negócio
                         </a>
